[package]
name = "raccacoonie"
version = "1.0.1"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
log = "0.4.29"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm", "palette", "widget-calendar"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["process", "rt", "sync", "time"] }
tui-input = { version = "0.14.0", features = ["ratatui-crossterm"] }
tui-logger = { version = "0.17.4", features = ["crossterm"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }

[[example]]
name = "example"
